--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,32 +1,24 @@
 ---
-const name = "nasme";
-const num = 10;
-const obj = {
-  name: name,
-  number: num,
-  favorites: ["astro", "css", "js"],
-};
-
-const res = await fetch("https://jsonplaceholder.typicode.com/posts?_limit=5");
-const data = await res.json();
-const isVisible = true;
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
+    <meta name="generator" content={Astro.generator} >
     <title>Astro</title>
   </head>
   <body>
-    <!-- <h1>{obj.favorites[isVisible ? [1] : [0]].toUpperCase()}</h1> -->
-
-    <!-- {obj.favorites.map((item) => <li>{item}</li>)} -->
-    {
-      data.map(item => (
-        <li>{item.title}</li>
-      ))
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/blog/">Blog</a>
+    <h1>My Astro Site</h1>
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
+  
+    <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+  
+    <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
   </body>
 </html>
