--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
     <h1>My Astro Site</h1>
-    <h1>Main Page</h1>
+    <h1>Main Page Astro develop</h1>
     <p>This is where I start.</p>
   </body>
 </html>
