--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,8 +2,11 @@
 ---
 
 <div class="nav-links">
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-    <a href="/tags/">Tags</a>
+    <a href="/">SOC</a>
+    <a href="/about/">Audyt IT</a> 
+    <a href="/tags/">Pentesty</a>
+    <a href="/tags/">CSIRT COIG</a>
+    <a href="/tags/">Kontakt</a>
+    <a href="/tags/">Coig S.A</a>
+    <a href="/blog/">News</a>
 </div>
