--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,7 +75,7 @@ a:focus {
 @media screen and (min-width: 636px) {
   .nav-links {
     margin-left: 5em;
-    display: block;
+    display: inline-flex;
     position: static;
     width: auto;
     background: none;
