--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 html {
-  background-color: #f1f5f9;
-  font-family: sans-serif;
+  background-color: hsl(210, 40%, 96%);
+  font-family: "Inter";
 }
 
 html.dark {
