--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,9 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import '@fontsource/karla';
+import '@fontsource/inter';
+
 import '../styles/global.css';
 const { pageTitle } = Astro.props;
 ---
