--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,13 @@
 :root {
   --main-font-family: "Inter";
   --primary-font-family: "Karla";
+  --main-color: #fff;
+  --primary-color: #00eac7;
 }
 
 html {
-  background-color: hsl(210, 40%, 96%);
+  /* background-color: hsl(210, 40%, 96%);  */
+  background-color: #111b24;
   font-family: var(--main-font-family);
 }
 
