--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,12 +1,23 @@
 ---
 ---
+<style>
+.nav__link {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+}
+
+</style>
+
 
 <div class="nav-links">
-    <a href="/">SOC</a>
-    <a href="/about/">Audyt IT</a> 
-    <a href="/tags/">Pentesty</a>
-    <a href="/tags/">CSIRT COIG</a>
-    <a href="/tags/">Kontakt</a>
-    <a href="/tags/">Coig S.A</a>
-    <a href="/blog/">News</a>
+    <a class="nav__link" href="/">SOC</a>
+    <a class="nav__link" href="/about/">Audyt IT</a> 
+    <a class="nav__link" href="/tags/">Pentesty</a>
+    <a class="nav__link" href="/tags/">CSIRT COIG</a>
+    <a class="nav__link" href="/tags/">Kontakt</a>
+    <a class="nav__link" href="/tags/">Coig S.A</a>
+    <a class="nav__link" href="/blog/">News</a>
 </div>
