--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,14 +68,12 @@ nav {
   margin: 0;
 }
 
-.nav-links a {
-  display: block;
-  text-align: center;
-  padding: 10px 0;
-  text-decoration: none;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-transform: uppercase;
+.nav__link {
+  color: var(--main-color);
+  font-family: var(--main-font-family);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
 }
 
 .nav-links a:hover,
