--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,8 +1,7 @@
 ---
 import '../styles/global.css';
-import Image  from '@astrojs/image/components';
 
-const { subheadline, headline, headlineAccent, description, imageSrc, imageWidths, imageSizes, imageAlt} = Astro.props;
+const { subheadline, headline, headlineAccent, description, descriptionAccent} = Astro.props;
 ---
 
 
@@ -11,45 +10,16 @@ const { subheadline, headline, headlineAccent, description, imageSrc, imageWidth
 
 .hero-wrapper {
     text-transform: uppercase;
-    padding-left: 60px;
+    padding-left: 80px;
+    padding-top: 110px;
+    max-width: 658px;
 }
-
-.subheader {
-    color: var(--primary-color);
-    font-size: 14px;
-}
-.headline {
-    color: var(--main-color);
-    font-size: 55px;
-    font-weight: 700;
-}
-
-.headline--accent {
-    display: block;
-    color: var(--primary-color);
-    font-weight: 700;
-}
-
-
-@media screen and (max-width: 636px) {
-    .headline {
-        font-size: 42px;
-    }
-
-    .description {
-        color: red;
-        font-size: 16px;
-    }
-
-}
-
-
 </style>
 
 <div class="hero-wrapper">
     <p class="subheader">{subheadline} </p>
     <h1 class="headline">{headline} <span class="headline--accent">{headlineAccent}</span></h1>
-    <p class="description">{description}</p>
+    <p class="description">{description} <span class="description description--accent description--bold">{descriptionAccent}</span></p>
 
     <slot />
 </div>
