--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import Hero from '../components/hero.astro';
+import Hero from '../components/Hero.astro';
 import HeroBackground from '../assets/hero-background.png';
+import CyberPadlock from '../assets/cyber-padlock.png';
 import { Image, Picture } from '@astrojs/image/components';
+import TwoColRow from '../components/TwoColRow.astro';
 const pageTitle = "Home Page";
 
 
@@ -18,12 +20,18 @@ const pageTitle = "Home Page";
   position: relative;
 }
 
+
 .hero__image-wrapper {
   position: absolute;
   top: 0;
   right: 0;
 }
 
+@media screen and (max-width: 1024px) { 
+  .hero__image-wrapper {
+  position: relative;
+}
+}
 
 
 </style>
@@ -34,37 +42,24 @@ const pageTitle = "Home Page";
     headline="COIG CYBER" 
     headlineAccent="Security" 
     description="Chroń swoją firmę dzięki dedykowanym rozwiązaniom"
+    descriptionAccent="bezpieczeństwa"
     > 
-    <p class="description description--bold"> Bepieczeństwa</p>
   </Hero>  
   <div class="hero__image-wrapper">
      <Picture class="hero__image"
         src={HeroBackground}
         widths={[352, 352, 352]}
-        sizes="(max-width: 800px) 453px, 352px"
+        sizes="(max-width: 800px) 253px, 453px"
         alt="descriptive text"
       />
   </div>
     </section>
-    <section class="hero">
-      <Hero 
-        subheadline="COIG S.A" 
-        headline="COIG CYBER" 
-        headlineAccent="Security" 
-        description="Chroń swoją firmę dzięki dedykowanym rozwiązaniom"
-        > 
-        <p class="description"> Bepieczeństwa</p>
-      </Hero>  
-        </section>
-        <section class="hero">
-          <Hero 
-            subheadline="COIG S.A" 
-            headline="COIG CYBER" 
-            headlineAccent="Security" 
-            description="Chroń swoją firmę dzięki dedykowanym rozwiązaniom"
-            > 
-            <p class="description"> Bepieczeństwa</p>
-          </Hero>  
-            </section>
+    <section>
+      <TwoColRow 
+      headline="cyberbezpieczeństwa" headlineAccent="Usługi", description="Zwiększ bezpieczeństwo w swojej firmie. Wybierz zestaw usług stosowny do potrzeb:"
+      image={CyberPadlock.src}
+      />
+
+    </section>
 
 </BaseLayout>
